fixed cards overlapping issue

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -207,25 +207,26 @@ footer h3 a:hover {
 
 
 .card-img {
+    width: 100%;
     border: 10px solid #d9c2a3; 
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
 }
 
 .rivers-card {
-    /* margin: 200px 0; */
+    margin: 200px 0;
     grid-column: 2/4;
     grid-row: 2/3;
 }
 
 .camping-card {
-    /* margin: 200px 0; */
+    margin: 200px 0;
     grid-column: 5/7;
     grid-row: 2/3;
 }
 
 .rapids-card {
-    /* margin: 200px 0; */
+    margin: 200px 0;
     grid-column: 8/10;
     grid-row: 2/3;
 }
